@@ -42,40 +42,40 @@
  */
 struct IPRange
 {
-	const char* addr;
+	const wxChar *addr;
 	unsigned int mask;
 };
 
 
+const IPRange ranges[] = {
 //	Here is reserved blocks from RFC 3330 at http://www.rfc-editor.org/rfc/rfc3330.txt
 //
-//	Address Block             Present Use                             Reference
-//	---------------------------------------------------------------------------
-const IPRange ranges[] = {
-	{ "0.0.0.0",		 8 },	// "This" Network             [RFC1700, page 4]
-	{ "10.0.0.0",		 8 },	// Private-Use Networks               [RFC1918]
-	{ "14.0.0.0",		 8 },	// Public-Data Networks     [RFC1700, page 181]
-	{ "24.0.0.0",		 8 },	// Cable Television Networks                 --
-	{ "39.0.0.0",		 8 },	// Reserved but subject
-								//    to allocation                   [RFC1797]
-	{ "127.0.0.0",		 8 },	// Loopback                   [RFC1700, page 5]
-	{ "128.0.0.0",		16 },	// Reserved but subject
-								//    to allocation                          --
-	{ "169.254.0.0",	16 },	// Link Local                                --
-	{ "172.16.0.0",		12 },	// Private-Use Networks               [RFC1918]
-	{ "191.255.0.0",	16 },	// Reserved but subject
-								//    to allocation                          --
-	{ "192.0.0.0",		24 },	// Reserved but subject          
-								//    to allocation                          --
-	{ "192.0.2.0",		24 },	// Test-Net
-	{ "192.88.99.0",	24 },	// 6to4 Relay Anycast                 [RFC3068]
-	{ "192.168.0.0",	16 },	// Private-Use Networks               [RFC1918]
-	{ "198.18.0.0",		15 },	// Network Interconnect
-								//    Device Benchmark Testing        [RFC2544]
-	{ "223.255.255.0",	24 },	// Reserved but subject
-								//    to allocation                          --
-	{ "224.0.0.0",		 4 },	// Multicast                          [RFC3171]
-	{ "240.0.0.0",		 4 }	// Reserved for Future Use    [RFC1700, page 4]
+//Address Block               Present Use                           Reference
+//---------------------------------------------------------------------------
+{ wxT("0.0.0.0"),        8 }, // "This" Network             [RFC1700, page 4]
+{ wxT("10.0.0.0"),       8 }, // Private-Use Networks               [RFC1918]
+{ wxT("14.0.0.0"),       8 }, // Public-Data Networks     [RFC1700, page 181]
+{ wxT("24.0.0.0"),       8 }, // Cable Television Networks                 --
+{ wxT("39.0.0.0"),       8 }, // Reserved but subject
+                              //    to allocation                   [RFC1797]
+{ wxT("127.0.0.0"),      8 }, // Loopback                   [RFC1700, page 5]
+{ wxT("128.0.0.0"),     16 }, // Reserved but subject
+                              //    to allocation                          --
+{ wxT("169.254.0.0"),   16 }, // Link Local                                --
+{ wxT("172.16.0.0"),    12 }, // Private-Use Networks               [RFC1918]
+{ wxT("191.255.0.0"),   16 }, // Reserved but subject
+                              //    to allocation                          --
+{ wxT("192.0.0.0"),     24 }, // Reserved but subject          
+                              //    to allocation                          --
+{ wxT("192.0.2.0"),     24 }, // Test-Net
+{ wxT("192.88.99.0"),   24 }, // 6to4 Relay Anycast                 [RFC3068]
+{ wxT("192.168.0.0"),   16 }, // Private-Use Networks               [RFC1918]
+{ wxT("198.18.0.0"),    15 }, // Network Interconnect
+                              //    Device Benchmark Testing        [RFC2544]
+{ wxT("223.255.255.0"), 24 }, // Reserved but subject
+                              //    to allocation                          --
+{ wxT("224.0.0.0"),      4 }, // Multicast                          [RFC3171]
+{ wxT("240.0.0.0"),      4 }  // Reserved for Future Use    [RFC1700, page 4]
 };
 
 
@@ -92,7 +92,7 @@ static filter_st filters[number_of_ranges];
 bool SetupFilter()
 {
 	for (int i = 0; i < number_of_ranges; ++i) {
-		filters[i].addr = CStringIPtoUint32( ranges[i].addr );
+		filters[i].addr = StringIPtoUint32( ranges[i].addr );
 		filters[i].mask = ~wxUINT32_SWAP_ALWAYS((1 << (32 - ranges[i].mask)) - 1);
 	}
 	return true;
@@ -163,3 +163,4 @@ wxThread::ExitCode CAsyncDNS::Entry()
 	return NULL;
 }
 #endif /* ! EC_REMOTE */
+
